--- a/tasks/load-variables.yml
+++ b/tasks/load-variables.yml
@@ -1,3 +1,4 @@
 ---
 - name: Include OS-specific variables.
   include_vars: "{{ ansible_distribution }}.yml"
+  when: ansible_distribution == 'Fedora'
