--- a/tasks/Fedora.yml
+++ b/tasks/Fedora.yml
@@ -1,5 +1,9 @@
 ---
 - name: Install prerequisites
+  raw: dnf install -y python-dnf libselinux-python
+  changed_when: false
+
+- name: Install prerequisites
   dnf:
     name: "{{ bootstrap_prerequisite }}"
     state: present
