--- a/vars/Fedora.yml
+++ b/vars/Fedora.yml
@@ -1,2 +1,2 @@
 ---
-bootstrap_prerequisite: "{{ bootstrap_default_prerequisite }} + ['python-devel']"
+bootstrap_prerequisite: "{{ bootstrap_default_prerequisite }} + ['python-devel', 'libselinux-python']"
