--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,21 +1,39 @@
 ---
+dependency:
+  name: galaxy
+  options:
+    role-file: requirements.yml
+
+driver:
+  name: docker
+
 lint:
   name: yamllint
+  options:
+    config-file: molecule/.yamllint
+
+platforms:
+  - name: centos7
+    image: centos:7
+  - name: debian9
+    image: debian:9
+  - name: fedora27
+    image: fedora:27
+  - name: ubuntu1604
+    image: ubuntu:16.04
 
 provisioner:
   name: ansible
+  options:
+    v: true
   lint:
     name: ansible-lint
-
-platforms:
-  - name: instance
+    options:
+      c: molecule/.ansible-lint
 
 scenario:
   name: default
-  create_sequence: []
-  check_sequence:
-    - lint
-  converge_sequence: []
-  destroy_sequence: []
-  test_sequence:
-    - lint
+
+verifier:
+  name: goss
+  enabled: false
