fix(alpine): Adds prerequiste to tasks

--- a/tasks/Alpine.yml
+++ b/tasks/Alpine.yml
@@ -4,3 +4,8 @@
     name: "{{ bootstrap_prerequisite }}"
     state: present
     update_cache: true
+
+- name: Install prerequisites
+  apk:
+    name: "{{ bootstrap_prerequisite }}"
+    state: present
