--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -13,14 +13,16 @@ lint:
     config-file: molecule/.yamllint
 
 platforms:
+  - name: alpine3.5
+    image: alpine:3.5
   - name: centos7
-    image: lansible/centos:7
+    image: centos:7
   - name: debian9
-    image: lansible/debian:9
+    image: debian:9
   - name: fedora27
-    image: lansible/fedora:27
+    image: fedora:27
   - name: ubuntu1604
-    image: lansible/ubuntu:16.04
+    image: ubuntu:16.04
 
 provisioner:
   name: ansible
