--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -15,6 +15,7 @@ lint:
 platforms:
   - name: alpine3.5
     image: alpine:3.5
+    command: sh -c "while true; do sleep 10000; done"
   - name: centos7
     image: centos:7
   - name: debian9
