fix(role): Fixes linting, switch debian9 and ubuntu 16.04 to default python3

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,8 +1,7 @@
 ---
 bootstrap_default_prerequisite:
-  - python
   - sudo
   - bash
   - ca-certificates
 
-bootstrap_prerequisite: "{{ bootstrap_default_prerequisite }}"
+bootstrap_prerequisite: "{{ bootstrap_default_prerequisite }} + [ 'python' ]"
