--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: Include Distribution version specific variables
+  include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_version }}.yml"
+  when: (ansible_distribution == 'Debian' and ansible_distribution_version == '9') or
+        (ansible_distribution == 'Ubuntu' and ansible_distribution_version == '16.04')
+
 - include_tasks: "{{ ansible_distribution }}.yml"
 
 - name: include cleanup
