--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,5 +3,6 @@ bootstrap_default_prerequisite:
   - sudo
   - bash
   - ca-certificates
+  - curl
 
 bootstrap_prerequisite: "{{ bootstrap_default_prerequisite }} + [ 'python' ]"
