--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,7 @@
 ---
 - name: Include Distribution version specific variables
   include_vars: "{{ ansible_os_family }}-family.yml"
-  when: (ansible_distribution == 'Debian' and ansible_distribution_version == '9') or
-        (ansible_distribution == 'Ubuntu' and ansible_distribution_version == '16.04')
+  when: ansible_os_family == 'Debian'
 
 - include_tasks: "{{ ansible_distribution }}.yml"
 
